--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,6 +1,214 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+<style>
+    /* ===== ОСНОВНЫЕ СТИЛИ ДЛЯ РАСТЯГИВАНИЯ ===== */
+    html, body {
+        width: 100%;
+        height: 100%;
+        min-width: 500px;  /* Минимальная ширина */
+        min-height: 600px; /* Минимальная высота */
+        max-width: 1200px; /* Максимальная ширина */
+        max-height: 1400px; /* Максимальная высота */
+        margin: 0;
+        padding: 0;
+        overflow: auto;    /* Автоматические скроллбары если нужно */
+    }
+    /* Делаем body растягиваемым */
+    body {
+        resize: both;
+        overflow: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    /* ===== УЛУЧШЕНИЯ ИНТЕРФЕЙСА ===== */
+    .container {
+        flex: 1;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        min-height: 0; /* Для корректного скроллинга */
+    }
+    /* Заголовок */
+    h1 {
+        color: #2c3e50;
+        margin-bottom: 20px;
+        font-size: 22px;
+        text-align: center;
+        border-bottom: 2px solid #3498db;
+        padding-bottom: 10px;
+    }
+    /* Группы формы */
+    .form-group {
+        margin-bottom: 15px;
+    }
+    .form-group label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: 600;
+        color: #34495e;
+    }
+    /* Текстовое поле */
+    textarea {
+        width: 100%;
+        min-height: 80px;
+        padding: 10px;
+        border: 2px solid #bdc3c7;
+        border-radius: 6px;
+        font-size: 14px;
+        resize: vertical;
+        transition: border-color 0.3s;
+    }
+    textarea:focus {
+        border-color: #3498db;
+        outline: none;
+    }
+    /* Выбор стилей - делаем сетку */
+    #style-select {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+        gap: 10px;
+        margin: 10px 0;
+    }
+    /* Каждый вариант стиля */
+    .style-option {
+        padding: 10px;
+        border: 2px solid #ecf0f1;
+        border-radius: 6px;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.2s;
+        background: white;
+    }
+    .style-option:hover {
+        border-color: #3498db;
+        background: #f8f9fa;
+    }
+    .style-option.selected {
+        border-color: #2ecc71;
+        background: #d5f4e6;
+        font-weight: bold;
+    }
+    /* Поле API ключа */
+    #api-key {
+        width: 100%;
+        padding: 10px;
+        border: 2px solid #bdc3c7;
+        border-radius: 6px;
+        font-size: 14px;
+        font-family: monospace;
+    }
+    /* Кнопки */
+    .button-group {
+        display: flex;
+        gap: 10px;
+        margin: 20px 0;
+    }
+    button {
+        flex: 1;
+        padding: 12px;
+        border: none;
+        border-radius: 6px;
+        font-size: 16px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s;
+    }
+    #generate-btn {
+        background: #3498db;
+        color: white;
+    }
+    #generate-btn:hover {
+        background: #2980b9;
+        transform: translateY(-2px);
+    }
+    #generate-btn:disabled {
+        background: #bdc3c7;
+        cursor: not-allowed;
+        transform: none;
+    }
+    #download-btn {
+        background: #2ecc71;
+        color: white;
+        display: none;
+    }
+    #download-btn:hover {
+        background: #27ae60;
+        transform: translateY(-2px);
+    }
+    /* Изображение результата */
+    #image-container {
+        flex: 1;
+        min-height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 2px dashed #bdc3c7;
+        border-radius: 8px;
+        margin-top: 20px;
+        padding: 20px;
+        background: #f8f9fa;
+    }
+    #image-result {
+        max-width: 100%;
+        max-height: 400px;
+        border-radius: 6px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    /* Статус */
+    #status {
+        margin: 15px 0;
+        padding: 12px;
+        border-radius: 6px;
+        text-align: center;
+        font-weight: 500;
+        min-height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .status-loading {
+        background: #fff9e6;
+        border: 2px solid #f1c40f;
+        color: #d35400;
+    }
+    .status-success {
+        background: #d5f4e6;
+        border: 2px solid #2ecc71;
+        color: #27ae60;
+    }
+    .status-error {
+        background: #fdeaea;
+        border: 2px solid #e74c3c;
+        color: #c0392b;
+    }
+    /* Адаптивность */
+    @media (max-width: 600px) {
+        #style-select {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    /* Индикатор растягивания (необязательно) */
+    body::after {
+        content: "↔ ↕";
+        position: fixed;
+        bottom: 5px;
+        right: 5px;
+        font-size: 12px;
+        color: #95a5a6;
+        opacity: 0.5;
+        pointer-events: none;
+    }
+</style>
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' 'unsafe-inline';
+        style-src 'self' 'unsafe-inline';
+        img-src 'self' data: https:;
+        connect-src 'self' https://illustraitor-ai-v2.onrender.com https://api.openai.com https://images.unsplash.com;
+        font-src 'self';
+    ">
     <meta charset="utf-8">
     <title>Illustraitor AI</title>
     <style>
@@ -152,4 +360,6 @@
     <script type="module" src="popup.js"></script>
 </body>
 </html>
+
+
 
